kbp ouput = 25 for PER